# BasicsOfProgrammingCourse

./: CMakeLists.txt  main.c
Libs/: CMakeLists.txt
Libs/algorithms/: CMakeLists.txt  algorithm.h
Libs/algorithms/functions/: function.c  function.h
Libs/data_structures/: CMakeLists.txt
Libs/data_structures/matrix/: matrix.c  matrix.h
Libs/data_structures/vector/: main.c  vector.c  vector.h  vectorVoid.c  vectorVoid.h
Libs/data_structures/vectorVoid/: main.c  vectorVoid.c
Libs/string/: string_.c  string_.h
Libs/string/tasks/1 task/: removeNonLetters.c  removeNonLetters.h
Libs/string/tasks/10 task/: reverseWordsInString.c  reverseWordsInString.h
Libs/string/tasks/11 task/: printWordBeforeFirstWordWithA.c  printWordBeforeFirstWordWithA.h
Libs/string/tasks/12 task/: getLastWordFromFirstStringIsInSecondString.c  getLastWordFromFirstStringIsInSecondString.h
Libs/string/tasks/13 task/: isStringHaveEqualWords.c  isStringHaveEqualWords.h
Libs/string/tasks/14 task/: isWordsContainsSameLetters.c  isWordsContainsSameLetters.h
Libs/string/tasks/15 task/: getStringOfWordsDiffOfLastWord.c  getStringOfWordsDiffOfLastWord.h
Libs/string/tasks/16 task/: getLastWordFromFirstStringIsInSecondString.c  getLastWordFromFirstStringIsInSecondString.h
Libs/string/tasks/17 task/: deleteWordsEqualLast.c  deleteWordsEqualLast.h
Libs/string/tasks/18 task/: completeStringWithLessWords.c  completeStringWithLessWords.h
Libs/string/tasks/19 task/: isEveryLetterInString.c  isEveryLetterInString.h
Libs/string/tasks/2 task/: removeExtraSpaces.c  removeExtraSpaces.h
Libs/string/tasks/3 task/: digitToStart.c  digitToStart.h
Libs/string/tasks/4 task/: changeDigitsOnSpacesByValue.c  changeDigitsOnSpacesByValue.h
Libs/string/tasks/5 task/: replace.c  replace.h
Libs/string/tasks/6 task/: checkSortingInString.c  checkSortingInString.h
Libs/string/tasks/7 task/: printWordsOfStringReverse.c  printWordsOfStringReverse.h
Libs/string/tasks/8 task/: countWordsPalindromes.c  countWordsPalindromes.h
Libs/string/tasks/9 task/: mergeTwoStrings.c  mergeTwoStrings.h
